@@ -23,6 +23,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: "Install OS dependencies"
+        run: |
+          sudo apt-get update
+          # libdevel-patchperl-perl is needed for perlbrew
+          sudo apt-get install -y libdevel-patchperl-perl
+
       - name: "Cache Perl"
         id: cache-perl
         uses: actions/cache@v4
